syntax = "proto3";

package pb;

option go_package = "github.com/yushk/sport_backend/manager/pb;pb";

message Comment {
    string id = 1;
    string courseid = 2;
    string comment_user = 3;
    string comment = 4;
    string score = 5;
}

service CommentManager {
    rpc CreateComment(CreateCommentRequest) returns (Comment) {}
    rpc GetComment(GetCommentRequest) returns (Comment) {}
    rpc UpdateComment(UpdateCommentRequest) returns (Comment) {}
    rpc DeleteComment(DeleteCommentRequest) returns (Comment) {}
    rpc GetComments(GetCommentsRequest) returns (GetCommentsReply) {}
}

message CreateCommentRequest {
    Comment data = 1;
}

message GetCommentRequest {
    string id = 1;
}

message UpdateCommentRequest {
    string id = 1;
    Comment data = 2;
}

message DeleteCommentRequest {
    string id = 1;
}

message GetCommentsRequest {
    string query = 1;
    int64 skip = 2;
    int64 limit = 3;
}

message GetCommentsReply {
    int64 total_count = 1;
    repeated Comment items = 2;
}