syntax = "proto3";

package pb;

option go_package = "github.com/yushk/sport_backend/manager/pb;pb";

import "sport_item.proto";

message EvaluateInfo {
    string id = 1;
    string home_work_id = 2;
    string solution_id = 3;
    string user_id = 4;
    string name = 5;
    repeated Evaluate evaluates = 6;
    string note = 7;
}

service EvaluateInfoManager {
    rpc CreateEvaluateInfo(CreateEvaluateInfoRequest) returns (EvaluateInfo) {}
    rpc UpdateEvaluateInfo(UpdateEvaluateInfoRequest) returns (EvaluateInfo) {}
    rpc DeleteEvaluateInfo(DeleteEvaluateInfoRequest) returns (EvaluateInfo) {}
    rpc GetEvaluateInfos(GetEvaluateInfosRequest) returns (GetEvaluateInfosReply) {}
}

message CreateEvaluateInfoRequest {
    EvaluateInfo data = 1;
}

message GetEvaluateInfoRequest {
    string id = 1;
}

message UpdateEvaluateInfoRequest {
    string id = 1;
    EvaluateInfo data = 2;
}

message DeleteEvaluateInfoRequest {
    string id = 1;
}

message GetEvaluateInfosRequest {
    string query = 1;
    int64 skip = 2;
    int64 limit = 3;
}

message GetEvaluateInfosReply {
    int64 total_count = 1;
    repeated EvaluateInfo items = 2;
}