syntax = "proto3";

package pb;

option go_package = "github.com/yushk/sport_backend/manager/pb;pb";
import "work.proto";

message Evaluate {
    string id = 1;
    string name = 2;
    string excellent = 3;
    string good = 4;
    string pass = 5;
    string flunk = 6;
}

message SportItem {
    string id = 1;
    string lable = 2;
    string content = 3;
    repeated FileInfo pics = 4;
    repeated FileInfo files = 5;
    repeated FileInfo  videos = 6;
    string userid = 7;
    repeated string auth_user = 8;
    int64 create_time = 9;
    int64 update_time = 10;
    repeated string teachers = 11;
    int32 type = 12;
    string sport_type = 13;
    string version = 14;
    repeated Evaluate evaluates = 15;
}

service SportItemManager {
    rpc CreateSportItem(CreateSportItemRequest) returns (SportItem) {}
    rpc GetSportItem(GetSportItemRequest) returns (SportItem) {}
    rpc UpdateSportItem(UpdateSportItemRequest) returns (SportItem) {}
    rpc DeleteSportItem(DeleteSportItemRequest) returns (SportItem) {}
    rpc GetSportItems(GetSportItemsRequest) returns (GetSportItemsReply) {}
}

message CreateSportItemRequest {
    SportItem data = 1;
}

message GetSportItemRequest {
    string id = 1;
}

message UpdateSportItemRequest {
    string id = 1;
    SportItem data = 2;
}

message DeleteSportItemRequest {
    string id = 1;
}

message GetSportItemsRequest {
    string query = 1;
    int64 skip = 2;
    int64 limit = 3;
}

message GetSportItemsReply {
    int64 total_count = 1;
    repeated SportItem items = 2;
}